drawer imagepicker added

--- a/ios/demo/Info.plist
+++ b/ios/demo/Info.plist
@@ -31,6 +31,13 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+<string>Allow access to photo library</string>
+<key>NSCameraUsageDescription</key>
+<string>Allow access to camera</string>
+<key>NSPhotoLibraryAddUsageDescription</key>
+<string>Allow saving photos</string>
+
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string/>
 	<key>UILaunchStoryboardName</key>
