--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/app": "^22.1.0",
     "@react-native-firebase/messaging": "^22.1.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/drawer": "^7.3.12",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
@@ -25,6 +26,8 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-image-crop-picker": "^0.42.0",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.17.5",
